--- a/css/shopping-list/style.css
+++ b/css/shopping-list/style.css
@@ -263,3 +263,44 @@ header img {
     justify-content: center;
   }
 }
+
+
+.accordion {
+  margin: 20px auto;
+  background-color: transparent;
+  border: 2px solid black;
+  border-radius: 7px;
+  color: black;
+  cursor: pointer;
+  padding: 18px;
+  width: 90%;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+  font-size: 18px;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+.accordion:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
