--- a/css/shopping-list/style.css
+++ b/css/shopping-list/style.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
-
-
 @font-face {
   font-family: "Geist Sans";
   font-weight: 400;
@@ -45,6 +42,7 @@ body {
 
 .tabs-content {
   height: 100vh !important;
+  overflow: auto!important;
 }
 
 .title {
@@ -60,7 +58,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 15px;
+  margin-top: 25px;
 }
 
 .anim-shopping {
@@ -240,12 +238,16 @@ h2 {
   align-items: center;
 }
 
-.shopping-list-wrapper {
+.shopping-list-wrapper, .meals-list-wrapper {
   margin-top: 10px;
   background-color: transparent;
   border-radius: 7px;
   overflow: hidden;
   margin-bottom: 10px;
+}
+
+.meals-list-wrapper {
+  margin-top: 20px;
 }
 
 .items-info {
@@ -298,7 +300,15 @@ h2 {
   cursor: pointer;
 }
 
+
+/* Mobile styles */
 @media (max-width: 480px) {
+
+  .shopping-header,
+  .meals-header {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
 
   .items-info {
     flex-direction: column;
@@ -325,7 +335,7 @@ h2 {
 
 
 .accordion {
-  margin: 20px auto;
+  margin: 0 auto 15px auto;
   background-color: transparent!important;
   border: 2px solid black;
   border-radius: 7px;
