--- a/css/shopping-list/style.css
+++ b/css/shopping-list/style.css
@@ -174,13 +174,13 @@ h2 {
   margin-right: 4px;
 }
 
-.clear-complete {
+.clear-complete, .meals-complete {
   display: flex;
   justify-content: flex-end;
   margin: auto;
 }
 
-.clear-complete:hover .bin {
+.clear-complete:hover .bin, .meals-complete:hover .bin {
   filter: invert(96%) sepia(34%) saturate(6700%) hue-rotate(324deg) brightness(99%) contrast(102%);
 }
 
@@ -236,7 +236,7 @@ h2 {
   color: hsl(233, 14%, 35%);
 }
 
-.shopping-item {
+.shopping-item, .meals-item {
   width: 100%;
   color: black;
   display: flex;
@@ -272,7 +272,7 @@ h2 {
   margin-top: 20px;
 }
 
-.items-info {
+.items-info, .meals-items-info {
   height: 70px;
   width: 100%;
   color: black;
@@ -332,12 +332,17 @@ h2 {
     border-bottom-right-radius: 10px;
 }
 
-  .items-info {
+  .items-info, .meals-items-info {
     flex-direction: column;
     margin-top: 50px;
   }
+  
+  .meals-items-info {
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
 
-  .clear-complete {
+  .clear-complete, .meals-complete {
     justify-content: center;
   }
 
