--- a/css/shopping-list/style.css
+++ b/css/shopping-list/style.css
@@ -180,6 +180,13 @@ h2 {
   margin: auto;
 }
 
+.empty-meal {
+  text-align: center;
+  background-color: rgb(255, 221, 221);
+  width: 100%;
+  justify-content: center;
+}
+
 .clear-complete:hover .bin, .meals-complete:hover .bin {
   filter: invert(96%) sepia(34%) saturate(6700%) hue-rotate(324deg) brightness(99%) contrast(102%);
 }
