--- a/css/shopping-list/style.css
+++ b/css/shopping-list/style.css
@@ -36,6 +36,18 @@ body {
   border-bottom-right-radius: 15px;
 }
 
+#meals {
+  display: none;
+  transition: opacity 1s ease all;
+  opacity: 0;
+}
+
+#shopping {
+  display: block;
+  transition: opacity 1s ease all;
+  opacity: 1;
+}
+
 #tabs-swipe {
   display: none;
 }
@@ -45,10 +57,19 @@ body {
   overflow: auto!important;
 }
 
+#switch {
+  background-image: url(/images/shopping-list/switch.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100px;
+  height: 100px;
+}
+
 .title {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   color: black;
   font-weight: bold;
   font-size: 25px;
@@ -81,11 +102,15 @@ body {
 
 h1,
 h2 {
-  margin: 20px 0px!important;
+  margin: 20px 0px;
   font-family: 'Geist Sans', sans-serif;
   font-size: 45px;
   font-style: normal;
   font-weight: 500!important;
+}
+
+h1 {
+  margin-bottom: 0;
 }
 
 .emoji {
@@ -117,14 +142,14 @@ h2 {
 .container {
   width: 100%;
   max-width: 700px;
-  margin: 100px 30px 0 30px;
+  padding: 0 20px;
 }
 
 .create-item {
   height: 70px;
   background-color: white;
   border: 2px solid black;
-  margin-top: 50px;
+  margin-top: 10px;
   border-radius: 7px;
   display: flex;
 }
@@ -350,7 +375,7 @@ h2 {
 
   .shopping-header,
   .meals-header {
-    height: 300px;
+    height: 350px;
   }
 }
 
