--- a/css/shopping-list/style.css
+++ b/css/shopping-list/style.css
@@ -30,7 +30,7 @@ body {
   left: 0;
   right: 0;
   width: 100%;
-  height: 315px;
+  height: 350px;
   z-index: -1;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -111,6 +111,7 @@ h2 {
 
 h1 {
   margin-bottom: 0;
+  text-align: center;
 }
 
 .emoji {
@@ -330,21 +331,20 @@ h1 {
   justify-content: center;
 }
 
-.delete-item {
+.delete-item, .delete-meal {
   margin-left: auto;
   display: flex;
   align-items: center;
 }
 
-.delete-item img {
+.delete-item img, .delete-meal img {
   width: 70%;
   margin-right: 30px;
 }
 
-.delete-item:hover {
+.delete-item:hover, .delete-meal:hover {
   cursor: pointer;
 }
-
 
 /* Mobile styles */
 @media (max-width: 480px) {
@@ -382,7 +382,6 @@ h1 {
 .carousel .carousel-item {
   width: 100%;
 }
-
 
 .accordion {
   margin: 0 auto 15px auto;
