--- a/css/shopping-list/style.css
+++ b/css/shopping-list/style.css
@@ -174,6 +174,27 @@ h1 {
   justify-content: center;
 }
 
+.panel {
+  display: flex;
+  flex-direction: column;
+}
+
+.meals-item {
+  order: 1; /* Set a default order value */
+}
+
+.one {
+  order: 1;
+}
+
+.two {
+  order: 2;
+}
+
+.three {
+  order: 3;
+}
+
 .check-mark:hover,
 .check-mark.checked {
   background: black;
@@ -282,6 +303,7 @@ input::-webkit-calendar-picker-indicator {
   background-color: white;
   margin-bottom: 7px;
   margin-top: 7px;
+  min-height: 70px;
 }
 
 .shopping-item:hover {
