Add local storage for screen selection, add empty items, fix animations, fix unreliable loading

--- a/css/shopping-list/style.css
+++ b/css/shopping-list/style.css
@@ -383,7 +383,8 @@ input::-webkit-calendar-picker-indicator {
 }
 
 #confetti, 
-#confetti-todo {
+#confetti-todo, 
+#confetti-meals {
   position: absolute;
   top: -170px;
   z-index: -1;
